--- a/joplin-to-anki.config
+++ b/joplin-to-anki.config
@@ -1,2 +1,3 @@
 notes=045242377402432a88352b55d4c43fdf,
 file=/home/n/.config/joplin-desktop/database.sqlite
+ankifile=/home/n/.local/share/Anki2/User 1/collection.anki2
