Get data from Anki

--- a/src/joplin-to-anki.config
+++ b/src/joplin-to-anki.config
@@ -1,3 +1,4 @@
 joplinnotes=045242377402432a88352b55d4c43fdf,
+ankidecks=1634122149747
 joplinfile=/home/n/.config/joplin-desktop/database.sqlite
 ankifile=/home/n/.local/share/Anki2/User 1/collection.anki2
