Option to hide j2aref in comparison

--- a/src/joplin-to-anki.config
+++ b/src/joplin-to-anki.config
@@ -3,4 +3,5 @@ ankidecks=1634122149747,
 joplinfile=/home/n/.config/joplin-desktop/database.sqlite
 ankifile=/home/n/.local/share/Anki2/User 1/collection.anki2
 dontshowifok=true
-dontshowifsim=true
+dontshowifsim=
+dontshowifref=true
