--- a/src/joplin-to-anki.config
+++ b/src/joplin-to-anki.config
@@ -4,4 +4,4 @@ joplinfile=/home/n/.config/joplin-desktop/database.sqlite
 ankifile=/home/n/.local/share/Anki2/User 1/collection.anki2
 dontshowifok=true
 dontshowifsim=
-dontshowifref=true
+dontshowifref=
